# Binary

./: .gitignore  CMakeLists.txt  README.md
src/: data_detector.cpp  data_detector.h  main.cpp
